Adjust greens, fix search entry spacing on advanced search.

--- a/admin/themes/default/css/sass/base/_variables.scss
+++ b/admin/themes/default/css/sass/base/_variables.scss
@@ -4,7 +4,7 @@ $lightgrayborder:   #E4E5DE;
 $darkgrayborder:    #D6D5C2;
 $black:             #232323;
 
-$lightgreen:        #EEF6E6;
+$lightgreen:        #eaf2e1;
 $green:             #3f7b00;  
 $blue:              #003576;
 $red:               #B00D00;
