--- a/admin/themes/default/css/sass/components/_alerts.scss
+++ b/admin/themes/default/css/sass/components/_alerts.scss
@@ -33,8 +33,8 @@ li .flash {
 
 .success {
     color: #155724;
-    background-color: #d4edda !important;
-    border-color: #c3e6cb !important;
+    background-color: $lightgreen !important;
+    border-color: darken($lightgreen,10%) !important;
 }
 
 .error, .alert {
