--- a/admin/themes/default/css/sass/components/_search.scss
+++ b/admin/themes/default/css/sass/components/_search.scss
@@ -205,6 +205,10 @@
 }
 
 .search-entry {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
 	select {
 	    min-width: 0;
 	    width: 40%;
